src/styles/globals.css
/* Tailwind Directives */
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Base Layer */
@layer base {
    html {
        font-family: 'Poppins', sans-serif;
    }

    h1 {
        @apply text-2xl font-bold text-[#F8F9FA] leading-10
    }

    h2 {
        @apply text-2xl leading-10
    }

    h3 {
        @apply text-lg leading-6
    }

    h4 {
        @apply font-medium text-base
    }

    p {
        line-height: 1.25rem !important;
    }

    a {
        line-height: 1.5rem !important;
        
    }
}

/* Components Layer */
@layer components {}

/* Utilities Layer */
@layer utilities {
    .page-width {
        @apply md:px-16 px-4 lg:px-0 lg:max-w-4xl xl:max-w-6xl 2xl:max-w-7xl mx-auto w-full
    }

    .section-padding-y {
        @apply py-32
    }
}

